# BLISS

./: .algokit.toml  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  server.js  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: health-check.yml
agents/openclaw/: AGENTS.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  agent-entrypoint.mjs  fallback-cron.mjs  mcp-config.example.json  mcp-server.mjs  monitor-vaults.mjs  nanobot.mjs  openclaw-railway.mjs  package.json  test-mcp.mjs
api/: advance-billing.mjs  agent-run.mjs  ai-optimizer.mjs  dodo-webhook.mjs  ghost-sub.mjs  gmail-scan.mjs  mcp-token.mjs  save-credentials.mjs  telegram-connect.mjs  telegram-webhook.mjs  x402-demo.mjs
api/agent/: registry.mjs
extension/: background.js  content.js  manifest.json  popup.html  popup.js
public/: manifest.json  robots.txt  sw.js
scripts/: build.py  deploy.js  deploy.py  rebuild-history.mjs  rebuild-history.sh  seed-registry.mjs
server/: handlers.mjs  rate-limit.mjs  x402-algorand.mjs
server/__tests__/: x402.test.mjs
smart_contracts/: __main__.py
smart_contracts/agent_escrow/: contract.py
smart_contracts/agent_escrow_v2/: contract.py
smart_contracts/artifacts/: deployed.json
smart_contracts/asa_escrow/: contract.py
src/: App.tsx  index.css  main.tsx
src/hooks/: useNFD.ts  (+4 more)
supabase/: config.toml
(+194 files in other folders)
