[project]
name = "bliss-algokit"
version = "0.1.0"
description = "AlgoKit backend layer for BLISS — Algorand smart contracts for escrow vaults"
requires-python = ">=3.12"
dependencies = [
    "algorand-python>=2.0.0,<3.0.0",
    "algokit-utils>=3.0.0,<4.0.0",
    "py-algorand-sdk>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
